--- a/css/style1.css
+++ b/css/style1.css
@@ -42,6 +42,16 @@ header{
     color: #000;
 }
 
+.botao{
+    padding: 10px;
+    background-color: #e9e2e2;
+    border-radius: 5px;
+}
+
+.botao:hover{
+    background-color: #e9e2e2c5;
+}
+
 .menu a:hover{
     color: #0000ff;
 }
