--- a/css/style1.css
+++ b/css/style1.css
@@ -14,6 +14,8 @@ body{
 
 .menu {
     /* display: flex; */
+    position: fixed;
+    top: 0;
     justify-content: space-around;
     align-items: center;
     width: 100vw;
